<resources>
    <string name="app_name">Questacion</string>
    <string name="ok">Aceptar</string>
    <string name="ok_retry">Reintentar</string>
    <string name="ok_open_settings">Ver configuración</string>
    <string name="start_trip">Comenzar viaje</string>
    <string name="stop_trip">Terminar viaje</string>
    <string name="cancel">Cancelar</string>
    <string name="ariving_to">Llegando a %1$s</string>
    <string name="leaving_from">Dejando %1$s</string>
    <string name="just_left">Acabas de dejar %1$s</string>
    <string name="route">Línea %1$s</string>
    <string name="location_explanation">La funcionalidad de Questacion está ligada por completo a t ubicación, sin ella, la app no puede funcionar</string>
    <string name="database_explanation">Para que Questacion funcione es necesario descargar una pequeña base de datos de tan solo 26 kb.</string>
    <string name="database_explanation_action">Presiona el botón para comenzar la descarga.</string>
    <string name="download_database">Descargar archivo</string>

    <string name="title_activity_permissions">Permissions</string>
    <string name="moveOn">Continuar</string>
    <string name="config_title">Configuración</string>

    <string name="vibrate_key">vibrate</string>
    <string name="sound_key">sound</string>
    <string name="threshold_key">threshold</string>
    <string name="start_key">start</string>


</resources>
