<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/database_explanation"
        android:id="@+id/tvExplanation"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:paddingBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/database_explanation_action"
        android:id="@+id/tvExplanationAction"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:paddingBottom="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download_database"
        android:id="@+id/startDatabaseDownloadButton"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:id="@+id/databaseDownloadProgress"
        android:layout_gravity="center_horizontal" />

</LinearLayout>